--- a/malllibrary/build.gradle
+++ b/malllibrary/build.gradle
@@ -26,15 +26,19 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     //为了解析字符串
+    //工具库
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     api 'com.wang.avi:library:2.1.3'
     api 'com.blankj:utilcode:1.25.0'
     api 'com.blankj:utilcodex:1.25.0'
+    api 'me.yokeyword:fragmentationx:1.0.1'
 }
